--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -60,6 +60,11 @@
     "        data = all_values[1:]\n",
     "        df = pd.DataFrame(data, columns=headers)\n",
     "        \n",
+    "        # Print the unique values in the date column for debugging\n",
+    "        if 'date' in df.columns:\n",
+    "            print(f\"\\nUnique date values in {worksheet_name}:\")\n",
+    "            print(df['date'].unique())\n",
+    "        \n",
     "        # Rename weight_in_kg to weight in release sheet\n",
     "        if worksheet_name == SHEET_NAMES['RELEASE']:\n",
     "            df = df.rename(columns={'weight_in_kg': 'weight'})\n",
@@ -70,6 +75,9 @@
     "\n",
     "def standardize_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
+    "        print(\"\\nStandardizing dataframe...\")\n",
+    "        print(\"Original columns:\", df.columns.tolist())\n",
+    "        \n",
     "        df_clean = df.copy()\n",
     "        \n",
     "        # Standardize column names\n",
@@ -77,6 +85,8 @@
     "                          .str.strip()\n",
     "                          .str.replace(' ', '_')\n",
     "                          .str.replace('-', '_'))\n",
+    "        \n",
+    "        print(\"Standardized columns:\", df_clean.columns.tolist())\n",
     "        \n",
     "        # Handle the weight_in_kg to weight rename\n",
     "        if 'weight_in_kg' in df_clean.columns:\n",
@@ -100,20 +110,44 @@
     "        return df\n",
     "    \n",
     "    try:\n",
+    "        print(\"\\nStandardizing dates...\")\n",
     "        df = df.copy()\n",
     "        \n",
+    "        # Print original date values for debugging\n",
+    "        print(\"Original unique date values:\", df['date'].unique())\n",
+    "        \n",
+    "        # Try different date formats\n",
     "        date_formats = ['%d %b %Y', '%d/%m/%y']\n",
+    "        date_parsed = False\n",
+    "        \n",
     "        for format in date_formats:\n",
     "            try:\n",
+    "                print(f\"Trying date format: {format}\")\n",
     "                df['date'] = pd.to_datetime(df['date'], format=format)\n",
+    "                date_parsed = True\n",
+    "                print(\"Successfully parsed dates using format:\", format)\n",
     "                break\n",
-    "            except ValueError:\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Failed to parse with format {format}: {str(e)}\")\n",
     "                continue\n",
-    "        else:\n",
+    "        \n",
+    "        if not date_parsed:\n",
+    "            print(\"Falling back to mixed format parsing\")\n",
     "            df['date'] = pd.to_datetime(df['date'], format='mixed', dayfirst=True)\n",
     "        \n",
+    "        # Validate successful date parsing\n",
+    "        if df['date'].isna().any():\n",
+    "            problematic_dates = df[df['date'].isna()]['date'].unique()\n",
+    "            print(\"Warning: Failed to parse these dates:\", problematic_dates)\n",
+    "            raise DataProcessingError(f\"Failed to parse dates: {problematic_dates}\")\n",
+    "        \n",
+    "        # Create month and year_month consistently\n",
     "        df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
     "        df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
+    "        \n",
+    "        # Print results for validation\n",
+    "        print(\"Processed unique months:\", df['month'].unique())\n",
+    "        print(\"Processed unique year_months:\", df['year_month'].unique())\n",
     "        \n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -121,19 +155,35 @@
     "\n",
     "def remove_opening_stock(df: pd.DataFrame, column_name: str) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
     "    try:\n",
+    "        print(f\"\\nRemoving opening stock using column: {column_name}\")\n",
     "        opening_stock_mask = df[column_name].str.contains('opening stock', case=False, na=False)\n",
     "        opening_stock_df = df[opening_stock_mask].copy()\n",
     "        main_df = df[~opening_stock_mask].copy()\n",
+    "        \n",
+    "        print(f\"Found {len(opening_stock_df)} opening stock entries\")\n",
+    "        print(f\"Remaining entries: {len(main_df)}\")\n",
+    "        \n",
     "        return main_df, opening_stock_df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to separate opening stock: {str(e)}\")\n",
     "\n",
     "def create_summary_df(stock_inflow_df: pd.DataFrame, release_df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
+    "        print(\"\\nCreating summary dataframe...\")\n",
+    "        \n",
+    "        # Print diagnostic information\n",
+    "        print(\"\\nStock Inflow Unique Months:\", stock_inflow_df['month'].unique())\n",
+    "        print(\"Stock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
+    "        print(\"\\nRelease Unique Months:\", release_df['month'].unique())\n",
+    "        print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
+    "        \n",
     "        all_months = sorted(list(set(stock_inflow_df['month'].unique()) | \n",
     "                               set(release_df['month'].unique())))\n",
     "        all_year_months = sorted(list(set(stock_inflow_df['year_month'].unique()) | \n",
     "                                    set(release_df['year_month'].unique())))\n",
+    "        \n",
+    "        print(\"\\nCombined Unique Months:\", all_months)\n",
+    "        print(\"Combined Unique Year-Months:\", all_year_months)\n",
     "        \n",
     "        summary_df = pd.DataFrame({\n",
     "            'month': all_months,\n",
@@ -181,11 +231,17 @@
     "            else:\n",
     "                summary_df[col_name] = 0\n",
     "        \n",
+    "        # Print final summary structure\n",
+    "        print(\"\\nFinal summary dataframe structure:\")\n",
+    "        print(summary_df.head())\n",
+    "        print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
+    "        \n",
     "        return summary_df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to create summary: {str(e)}\")\n",
     "\n",
     "def prepare_df_for_upload(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    print(\"\\nPreparing dataframe for upload...\")\n",
     "    df_copy = df.copy()\n",
     "    \n",
     "    date_columns = df_copy.select_dtypes(include=['datetime64']).columns\n",
@@ -197,11 +253,13 @@
     "        df_copy[col] = df_copy[col].astype(str)\n",
     "        df_copy[col] = df_copy[col].replace('nan', '')\n",
     "    \n",
+    "    print(f\"Prepared {len(df_copy)} rows for upload\")\n",
     "    return df_copy\n",
     "\n",
     "def upload_df_to_gsheet(df: pd.DataFrame, spreadsheet_id: str, \n",
     "                       sheet_name: str, credentials_file: str) -> bool:\n",
     "    try:\n",
+    "        print(f\"\\nUploading data to sheet: {sheet_name}\")\n",
     "        df_to_upload = prepare_df_for_upload(df)\n",
     "        \n",
     "        credentials = service_account.Credentials.from_service_account_file(\n",
@@ -238,6 +296,8 @@
     "                       release_df: pd.DataFrame) -> Tuple[pd.DataFrame, pd.DataFrame, \n",
     "                                                        pd.DataFrame, pd.DataFrame]:\n",
     "    try:\n",
+    "        print(\"\\nProcessing sheets data...\")\n",
+    "        \n",
     "        stock_inflow_df = standardize_dataframe(stock_inflow_df)\n",
     "        release_df = standardize_dataframe(release_df)\n",
     "        \n",
@@ -265,6 +325,8 @@
     "    CREDENTIALS_FILE = 'credentials.json'\n",
     "    \n",
     "    try:\n",
+    "        print(\"\\nStarting data processing...\")\n",
+    "        \n",
     "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
     "        if not spreadsheet_id:\n",
     "            raise DataProcessingError(\"SPREADSHEET_ID environment variable not set\")\n",
@@ -290,12 +352,12 @@
     "                print(f\"Failed to upload {sheet_name}\")\n",
     "        \n",
     "        if success:\n",
-    "            print(\"Data processing and upload completed successfully!\")\n",
+    "            print(\"\\nData processing and upload completed successfully!\")\n",
     "        else:\n",
     "            raise DataProcessingError(\"Failed to upload one or more datasets\")\n",
     "            \n",
     "    except Exception as e:\n",
-    "        print(f\"An error occurred: {str(e)}\")\n",
+    "        print(f\"\\nAn error occurred: {str(e)}\")\n",
     "        raise\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -305,9 +367,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:project-env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-project-env-py"
   },
   "language_info": {
    "codemirror_mode": {
