--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -177,40 +177,37 @@
     "        print(\"\\nRelease Unique Months:\", release_df['month'].unique())\n",
     "        print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
     "        \n",
-    "        all_months = sorted(list(set(stock_inflow_df['month'].unique()) | \n",
-    "                               set(release_df['month'].unique())))\n",
+    "        # First, get all unique year_months\n",
     "        all_year_months = sorted(list(set(stock_inflow_df['year_month'].unique()) | \n",
     "                                    set(release_df['year_month'].unique())))\n",
     "        \n",
-    "        print(\"\\nCombined Unique Months:\", all_months)\n",
-    "        print(\"Combined Unique Year-Months:\", all_year_months)\n",
+    "        # Create summary_df with year_month first\n",
+    "        summary_df = pd.DataFrame({'year_month': all_year_months})\n",
     "        \n",
-    "        summary_df = pd.DataFrame({\n",
-    "            'month': all_months,\n",
-    "            'year_month': all_year_months\n",
-    "        })\n",
-    "        \n",
+    "        # Extract month from year_month (assuming format 'YYYY-MMM')\n",
+    "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
+    "                \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
     "                stock_inflow_df['product_type'] == PRODUCT_TYPES['CHICKEN']\n",
-    "            ].groupby('month').agg({\n",
+    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'chicken_release': release_df[\n",
     "                release_df['product'] == PRODUCT_TYPES['CHICKEN']\n",
-    "            ].groupby('month').agg({\n",
+    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'gizzard_inflow': stock_inflow_df[\n",
     "                stock_inflow_df['product_type'] == PRODUCT_TYPES['GIZZARD']\n",
-    "            ].groupby('month').agg({\n",
+    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'gizzard_release': release_df[\n",
     "                release_df['product'] == PRODUCT_TYPES['GIZZARD']\n",
-    "            ].groupby('month').agg({\n",
+    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
     "                'weight': 'sum'\n",
     "            })\n",
     "        }\n",
@@ -226,7 +223,7 @@
     "        \n",
     "        for col_name, (summary_key, metric) in summary_columns.items():\n",
     "            if metric in product_summaries[summary_key].columns:\n",
-    "                summary_df[col_name] = summary_df['month'].map(\n",
+    "                summary_df[col_name] = summary_df['year_month'].map(  # Changed from 'month' to 'year_month'\n",
     "                    product_summaries[summary_key][metric]).fillna(0)\n",
     "            else:\n",
     "                summary_df[col_name] = 0\n",
