--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -186,6 +186,8 @@
     "        \n",
     "        # Extract month from year_month (assuming format 'YYYY-MMM')\n",
     "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
+    "\n",
+    "        summary_df = summary_df[['month', 'year_month']]\n",
     "                \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
