--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -229,6 +229,9 @@
     "                    product_summaries[summary_key][metric]).fillna(0)\n",
     "            else:\n",
     "                summary_df[col_name] = 0\n",
+    "\n",
+    "        # Sort by year_month in descending order (latest to earliest)\n",
+    "        summary_df = summary_df.sort_values('year_month', ascending=False)\n",
     "        \n",
     "        # Print final summary structure\n",
     "        print(\"\\nFinal summary dataframe structure:\")\n",
