--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -231,7 +231,8 @@
     "                summary_df[col_name] = 0\n",
     "\n",
     "        # Sort by year_month in descending order (latest to earliest)\n",
-    "        summary_df = summary_df.sort_values('year_month', ascending=False)\n",
+    "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
+    "        summary_df = summary_df.sort_values('sort_date', ascending=False).drop('sort_date', axis=1)\n",
     "        \n",
     "        # Print final summary structure\n",
     "        print(\"\\nFinal summary dataframe structure:\")\n",
