--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -233,6 +233,10 @@
     "        # Sort by year_month in descending order (latest to earliest)\n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False).drop('sort_date', axis=1)\n",
+    "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
+    "\n",
+    "        # Drop the sorting column\n",
+    "        summary_df = summary_df.drop('sort_date', axis=1)\n",
     "        \n",
     "        # Print final summary structure\n",
     "        print(\"\\nFinal summary dataframe structure:\")\n",
