--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -186,30 +186,29 @@
     "        \n",
     "        # Extract month from year_month (assuming format 'YYYY-MMM')\n",
     "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
-    "\n",
     "        summary_df = summary_df[['month', 'year_month']]\n",
     "                \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
     "                stock_inflow_df['product_type'] == PRODUCT_TYPES['CHICKEN']\n",
-    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
+    "            ].groupby('year_month').agg({\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'chicken_release': release_df[\n",
     "                release_df['product'] == PRODUCT_TYPES['CHICKEN']\n",
-    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
+    "            ].groupby('year_month').agg({\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'gizzard_inflow': stock_inflow_df[\n",
     "                stock_inflow_df['product_type'] == PRODUCT_TYPES['GIZZARD']\n",
-    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
+    "            ].groupby('year_month').agg({\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'gizzard_release': release_df[\n",
     "                release_df['product'] == PRODUCT_TYPES['GIZZARD']\n",
-    "            ].groupby('year_month').agg({  # Changed from 'month' to 'year_month'\n",
+    "            ].groupby('year_month').agg({\n",
     "                'weight': 'sum'\n",
     "            })\n",
     "        }\n",
@@ -225,13 +224,40 @@
     "        \n",
     "        for col_name, (summary_key, metric) in summary_columns.items():\n",
     "            if metric in product_summaries[summary_key].columns:\n",
-    "                summary_df[col_name] = summary_df['year_month'].map(  # Changed from 'month' to 'year_month'\n",
+    "                summary_df[col_name] = summary_df['year_month'].map(\n",
     "                    product_summaries[summary_key][metric]).fillna(0)\n",
     "            else:\n",
     "                summary_df[col_name] = 0\n",
     "\n",
-    "        # Sort by year_month in descending order (latest to earliest)\n",
+    "        # Sort by year_month in ascending order to calculate running balances\n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
+    "        summary_df = summary_df.sort_values('sort_date')\n",
+    "\n",
+    "        # Calculate and carry forward balances\n",
+    "        previous_chicken_quantity_balance = 0\n",
+    "        previous_chicken_weight_balance = 0\n",
+    "        previous_gizzard_weight_balance = 0\n",
+    "\n",
+    "        for index in summary_df.index:\n",
+    "            # Add previous balances to current inflow\n",
+    "            summary_df.loc[index, 'total_chicken_inflow_quantity'] += previous_chicken_quantity_balance\n",
+    "            summary_df.loc[index, 'total_chicken_inflow_weight'] += previous_chicken_weight_balance\n",
+    "            summary_df.loc[index, 'total_gizzard_inflow_weight'] += previous_gizzard_weight_balance\n",
+    "\n",
+    "            # Calculate new balances\n",
+    "            previous_chicken_quantity_balance = max(0, \n",
+    "                summary_df.loc[index, 'total_chicken_inflow_quantity'] - \n",
+    "                summary_df.loc[index, 'total_chicken_release_quantity'])\n",
+    "            \n",
+    "            previous_chicken_weight_balance = max(0,\n",
+    "                summary_df.loc[index, 'total_chicken_inflow_weight'] - \n",
+    "                summary_df.loc[index, 'total_chicken_release_weight'])\n",
+    "            \n",
+    "            previous_gizzard_weight_balance = max(0,\n",
+    "                summary_df.loc[index, 'total_gizzard_inflow_weight'] - \n",
+    "                summary_df.loc[index, 'total_gizzard_release_weight'])\n",
+    "\n",
+    "        # Sort back to descending order and format year_month for Looker\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False)\n",
     "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
     "        summary_df = summary_df.drop('sort_date', axis=1)\n",
@@ -244,6 +270,8 @@
     "        return summary_df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to create summary: {str(e)}\")\n",
+    "        \n",
+    "\n",
     "\n",
     "def prepare_df_for_upload(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    print(\"\\nPreparing dataframe for upload...\")\n",
