--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -8,13 +8,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from google.oauth2.credentials import Credentials\n",
     "from google.oauth2 import service_account\n",
     "from googleapiclient.discovery import build\n",
     "from googleapiclient.errors import HttpError\n",
     "import gspread\n",
     "import os\n",
-    "from typing import Tuple, Dict, List\n",
+    "from typing import Tuple, Dict, List, Any\n",
     "from datetime import datetime\n",
     "\n",
     "SHEET_NAMES = {\n",
@@ -31,17 +30,25 @@
     "    'GIZZARD': 'gizzard'\n",
     "}\n",
     "\n",
+    "DATE_FORMATS = ['%d %b %Y', '%d/%m/%y']\n",
+    "GOOGLE_SHEETS_SCOPE = ['https://www.googleapis.com/auth/spreadsheets']\n",
+    "\n",
     "class DataProcessingError(Exception):\n",
     "    \"\"\"Custom exception for data processing errors\"\"\"\n",
     "    pass\n",
     "\n",
-    "def connect_to_sheets(credentials_file: str) -> gspread.Spreadsheet:\n",
+    "def get_credentials(credentials_file: str) -> service_account.Credentials:\n",
+    "    \"\"\"Create and return credentials for Google Sheets access\"\"\"\n",
     "    try:\n",
-    "        credentials = service_account.Credentials.from_service_account_file(\n",
+    "        return service_account.Credentials.from_service_account_file(\n",
     "            credentials_file,\n",
-    "            scopes=['https://www.googleapis.com/auth/spreadsheets']\n",
+    "            scopes=GOOGLE_SHEETS_SCOPE\n",
     "        )\n",
-    "        \n",
+    "    except Exception as e:\n",
+    "        raise DataProcessingError(f\"Failed to create credentials: {str(e)}\")\n",
+    "\n",
+    "def connect_to_sheets(credentials: service_account.Credentials) -> gspread.Spreadsheet:\n",
+    "    try:\n",
     "        gc = gspread.authorize(credentials)\n",
     "        spreadsheet_url = os.getenv('SPREADSHEET_URL')\n",
     "        if not spreadsheet_url:\n",
@@ -56,18 +63,14 @@
     "        all_values = worksheet.get_all_values()\n",
     "        if not all_values:\n",
     "            raise DataProcessingError(f\"No data found in worksheet {worksheet_name}\")\n",
+    "        \n",
     "        headers = all_values[0]\n",
     "        data = all_values[1:]\n",
     "        df = pd.DataFrame(data, columns=headers)\n",
     "        \n",
-    "        # Print the unique values in the date column for debugging\n",
     "        if 'date' in df.columns:\n",
     "            print(f\"\\nUnique date values in {worksheet_name}:\")\n",
     "            print(df['date'].unique())\n",
-    "        \n",
-    "        # Rename weight_in_kg to weight in release sheet\n",
-    "        if worksheet_name == SHEET_NAMES['RELEASE']:\n",
-    "            df = df.rename(columns={'weight_in_kg': 'weight'})\n",
     "        \n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -94,7 +97,6 @@
     "        \n",
     "        for column in df_clean.columns:\n",
     "            df_clean[column] = df_clean[column].astype(str).str.strip().str.lower()\n",
-    "            \n",
     "            try:\n",
     "                numeric_values = pd.to_numeric(df_clean[column].str.replace(',', ''))\n",
     "                df_clean[column] = numeric_values\n",
@@ -112,15 +114,10 @@
     "    try:\n",
     "        print(\"\\nStandardizing dates...\")\n",
     "        df = df.copy()\n",
-    "        \n",
-    "        # Print original date values for debugging\n",
     "        print(\"Original unique date values:\", df['date'].unique())\n",
     "        \n",
-    "        # Try different date formats\n",
-    "        date_formats = ['%d %b %Y', '%d/%m/%y']\n",
     "        date_parsed = False\n",
-    "        \n",
-    "        for format in date_formats:\n",
+    "        for format in DATE_FORMATS:\n",
     "            try:\n",
     "                print(f\"Trying date format: {format}\")\n",
     "                df['date'] = pd.to_datetime(df['date'], format=format)\n",
@@ -135,17 +132,14 @@
     "            print(\"Falling back to mixed format parsing\")\n",
     "            df['date'] = pd.to_datetime(df['date'], format='mixed', dayfirst=True)\n",
     "        \n",
-    "        # Validate successful date parsing\n",
     "        if df['date'].isna().any():\n",
     "            problematic_dates = df[df['date'].isna()]['date'].unique()\n",
     "            print(\"Warning: Failed to parse these dates:\", problematic_dates)\n",
     "            raise DataProcessingError(f\"Failed to parse dates: {problematic_dates}\")\n",
     "        \n",
-    "        # Create month and year_month consistently\n",
     "        df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
     "        df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
     "        \n",
-    "        # Print results for validation\n",
     "        print(\"Processed unique months:\", df['month'].unique())\n",
     "        print(\"Processed unique year_months:\", df['year_month'].unique())\n",
     "        \n",
@@ -171,20 +165,13 @@
     "    try:\n",
     "        print(\"\\nCreating summary dataframe...\")\n",
     "        \n",
-    "        # Print diagnostic information\n",
-    "        print(\"\\nStock Inflow Unique Months:\", stock_inflow_df['month'].unique())\n",
-    "        print(\"Stock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
-    "        print(\"\\nRelease Unique Months:\", release_df['month'].unique())\n",
+    "        print(\"\\nStock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
     "        print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
     "        \n",
-    "        # First, get all unique year_months\n",
     "        all_year_months = sorted(list(set(stock_inflow_df['year_month'].unique()) | \n",
     "                                    set(release_df['year_month'].unique())))\n",
     "        \n",
-    "        # Create summary_df with year_month first\n",
     "        summary_df = pd.DataFrame({'year_month': all_year_months})\n",
-    "        \n",
-    "        # Extract month from year_month (assuming format 'YYYY-MMM')\n",
     "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
     "        summary_df = summary_df[['month', 'year_month']]\n",
     "                \n",
@@ -229,40 +216,41 @@
     "            else:\n",
     "                summary_df[col_name] = 0\n",
     "\n",
-    "        # Sort by year_month in ascending order to calculate running balances\n",
+    "        # Sort by year_month and calculate running balances\n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
     "        summary_df = summary_df.sort_values('sort_date')\n",
     "\n",
     "        # Calculate and carry forward balances\n",
-    "        previous_chicken_quantity_balance = 0\n",
-    "        previous_chicken_weight_balance = 0\n",
-    "        previous_gizzard_weight_balance = 0\n",
+    "        previous_balances = {\n",
+    "            'chicken_quantity': 0,\n",
+    "            'chicken_weight': 0,\n",
+    "            'gizzard_weight': 0\n",
+    "        }\n",
     "\n",
     "        for index in summary_df.index:\n",
     "            # Add previous balances to current inflow\n",
-    "            summary_df.loc[index, 'total_chicken_inflow_quantity'] += previous_chicken_quantity_balance\n",
-    "            summary_df.loc[index, 'total_chicken_inflow_weight'] += previous_chicken_weight_balance\n",
-    "            summary_df.loc[index, 'total_gizzard_inflow_weight'] += previous_gizzard_weight_balance\n",
+    "            summary_df.loc[index, 'total_chicken_inflow_quantity'] += previous_balances['chicken_quantity']\n",
+    "            summary_df.loc[index, 'total_chicken_inflow_weight'] += previous_balances['chicken_weight']\n",
+    "            summary_df.loc[index, 'total_gizzard_inflow_weight'] += previous_balances['gizzard_weight']\n",
     "\n",
     "            # Calculate new balances\n",
-    "            previous_chicken_quantity_balance = max(0, \n",
+    "            previous_balances['chicken_quantity'] = max(0, \n",
     "                summary_df.loc[index, 'total_chicken_inflow_quantity'] - \n",
     "                summary_df.loc[index, 'total_chicken_release_quantity'])\n",
     "            \n",
-    "            previous_chicken_weight_balance = max(0,\n",
+    "            previous_balances['chicken_weight'] = max(0,\n",
     "                summary_df.loc[index, 'total_chicken_inflow_weight'] - \n",
     "                summary_df.loc[index, 'total_chicken_release_weight'])\n",
     "            \n",
-    "            previous_gizzard_weight_balance = max(0,\n",
+    "            previous_balances['gizzard_weight'] = max(0,\n",
     "                summary_df.loc[index, 'total_gizzard_inflow_weight'] - \n",
     "                summary_df.loc[index, 'total_gizzard_release_weight'])\n",
     "\n",
-    "        # Sort back to descending order and format year_month for Looker\n",
+    "        # Sort and format for output\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False)\n",
     "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
     "        summary_df = summary_df.drop('sort_date', axis=1)\n",
     "        \n",
-    "        # Print final summary structure\n",
     "        print(\"\\nFinal summary dataframe structure:\")\n",
     "        print(summary_df.head())\n",
     "        print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
@@ -270,8 +258,6 @@
     "        return summary_df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to create summary: {str(e)}\")\n",
-    "        \n",
-    "\n",
     "\n",
     "def prepare_df_for_upload(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    print(\"\\nPreparing dataframe for upload...\")\n",
@@ -289,18 +275,13 @@
     "    print(f\"Prepared {len(df_copy)} rows for upload\")\n",
     "    return df_copy\n",
     "\n",
-    "def upload_df_to_gsheet(df: pd.DataFrame, spreadsheet_id: str, \n",
-    "                       sheet_name: str, credentials_file: str) -> bool:\n",
+    "def upload_df_to_gsheet(df: pd.DataFrame, \n",
+    "                       spreadsheet_id: str, \n",
+    "                       sheet_name: str, \n",
+    "                       service: Any) -> bool:\n",
     "    try:\n",
     "        print(f\"\\nUploading data to sheet: {sheet_name}\")\n",
     "        df_to_upload = prepare_df_for_upload(df)\n",
-    "        \n",
-    "        credentials = service_account.Credentials.from_service_account_file(\n",
-    "            credentials_file,\n",
-    "            scopes=['https://www.googleapis.com/auth/spreadsheets']\n",
-    "        )\n",
-    "        \n",
-    "        service = build('sheets', 'v4', credentials=credentials)\n",
     "        \n",
     "        values = [df_to_upload.columns.tolist()]\n",
     "        values.extend([[str(cell) if cell is not None and cell == cell else '' \n",
@@ -363,14 +344,21 @@
     "        spreadsheet_id = os.getenv('SPREADSHEET_ID')\n",
     "        if not spreadsheet_id:\n",
     "            raise DataProcessingError(\"SPREADSHEET_ID environment variable not set\")\n",
+    "            \n",
+    "        # Create credentials and services once\n",
+    "        credentials = get_credentials(CREDENTIALS_FILE)\n",
+    "        spreadsheet = connect_to_sheets(credentials)\n",
+    "        sheets_service = build('sheets', 'v4', credentials=credentials)\n",
     "        \n",
-    "        spreadsheet = connect_to_sheets(CREDENTIALS_FILE)\n",
+    "        # Read the worksheets\n",
     "        stock_inflow_df = read_worksheet_to_df(spreadsheet, SHEET_NAMES['STOCK_INFLOW'])\n",
     "        release_df = read_worksheet_to_df(spreadsheet, SHEET_NAMES['RELEASE'])\n",
     "        \n",
+    "        # Process the data\n",
     "        stock_inflow_main_df, opening_stock_df, release_df, summary_df = process_sheets_data(\n",
     "            stock_inflow_df, release_df)\n",
     "        \n",
+    "        # Define upload tasks\n",
     "        upload_tasks = [\n",
     "            (stock_inflow_main_df, SHEET_NAMES['STOCK_INFLOW_CLEAN']),\n",
     "            (opening_stock_df, SHEET_NAMES['OPENING_STOCK']),\n",
@@ -378,9 +366,10 @@
     "            (summary_df, SHEET_NAMES['SUMMARY'])\n",
     "        ]\n",
     "        \n",
+    "        # Upload all datasets\n",
     "        success = True\n",
     "        for df, sheet_name in upload_tasks:\n",
-    "            if not upload_df_to_gsheet(df, spreadsheet_id, sheet_name, CREDENTIALS_FILE):\n",
+    "            if not upload_df_to_gsheet(df, spreadsheet_id, sheet_name, sheets_service):\n",
     "                success = False\n",
     "                print(f\"Failed to upload {sheet_name}\")\n",
     "        \n",
