--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -107,39 +107,46 @@
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to standardize dataframe: {str(e)}\")\n",
     "\n",
-    "def standardize_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "def standardize_dates(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    if df.empty:\n",
+    "        return df\n",
+    "    \n",
     "    try:\n",
-    "        print(\"\\nStandardizing dataframe...\")\n",
-    "        print(\"Original columns:\", df.columns.tolist())\n",
+    "        print(\"\\nStandardizing dates...\")\n",
+    "        df = df.copy()\n",
+    "        print(\"Original unique date values:\", df['date'].unique())\n",
     "        \n",
-    "        df_clean = df.copy()\n",
+    "        date_parsed = False\n",
+    "        for format in DATE_FORMATS:\n",
+    "            try:\n",
+    "                print(f\"Trying date format: {format}\")\n",
+    "                df['date'] = pd.to_datetime(df['date'], format=format)\n",
+    "                date_parsed = True\n",
+    "                print(\"Successfully parsed dates using format:\", format)\n",
+    "                break\n",
+    "            except ValueError as e:\n",
+    "                print(f\"Failed to parse with format {format}: {str(e)}\")\n",
+    "                continue\n",
     "        \n",
-    "        # Standardize column names\n",
-    "        df_clean.columns = (df_clean.columns.str.lower()\n",
-    "                          .str.strip()\n",
-    "                          .str.replace(' ', '_')\n",
-    "                          .str.replace('-', '_'))\n",
+    "        if not date_parsed:\n",
+    "            print(\"Falling back to mixed format parsing\")\n",
+    "            df['date'] = pd.to_datetime(df['date'], format='mixed', dayfirst=True)\n",
     "        \n",
-    "        print(\"Standardized columns:\", df_clean.columns.tolist())\n",
+    "        if df['date'].isna().any():\n",
+    "            problematic_dates = df[df['date'].isna()]['date'].unique()\n",
+    "            print(\"Warning: Failed to parse these dates:\", problematic_dates)\n",
+    "            raise DataProcessingError(f\"Failed to parse dates: {problematic_dates}\")\n",
     "        \n",
-    "        # Handle the weight_in_kg to weight rename\n",
-    "        if 'weight_in_kg' in df_clean.columns:\n",
-    "            df_clean = df_clean.rename(columns={'weight_in_kg': 'weight'})\n",
+    "        df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
+    "        df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
     "        \n",
-    "        # First try numeric conversion for known numeric columns\n",
-    "        numeric_columns = ['weight', 'quantity']\n",
-    "        for column in df_clean.columns:\n",
-    "            if column in numeric_columns:\n",
-    "                try:\n",
-    "                    df_clean[column] = pd.to_numeric(df_clean[column].astype(str).str.replace(',', ''))\n",
-    "                except (ValueError, TypeError):\n",
-    "                    print(f\"Warning: Could not convert {column} to numeric\")\n",
-    "            else:\n",
-    "                df_clean[column] = df_clean[column].astype(str).str.strip().str.lower()\n",
+    "        print(\"Processed unique months:\", df['month'].unique())\n",
+    "        print(\"Processed unique year_months:\", df['year_month'].unique())\n",
     "        \n",
-    "        return df_clean\n",
+    "        return df\n",
     "    except Exception as e:\n",
-    "        raise DataProcessingError(f\"Failed to standardize dataframe: {str(e)}\")\n",
+    "        raise DataProcessingError(f\"Failed to standardize dates: {str(e)}\")\n",
+    "        \n",
     "\n",
     "def remove_opening_stock(df: pd.DataFrame, column_name: str) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
     "    try:\n",
